# effective-octo-system

./: .gitignore  README.md  docker-compose.yaml  nginx.conf  tests.sh
certs/: generate.sh
code/: CMakeLists.txt  Client.cpp  Client.h  Config.cpp  Config.h  ConnectionStatus.h  File.cpp  File.h  Folder.cpp  Folder.h  main.cpp
code/client/: main.cpp
code/cmake/: FindSodium.cmake
code/crypto/: Edx25519_KeyPair.cpp  Edx25519_KeyPair.h  Encryptor.cpp  Encryptor.h  Signator.cpp  Signator.h  SymKey.cpp  SymKey.h
code/lib/: CLI11.hpp  base64.cpp
code/server/: main.cpp
code/web/: WebActions.h  WebClient.cpp  WebClient.h
doc/: images.sh  rapport.typ  template.typ  watch-images.sh
doc/project_mermaid/: access_file.mmd  access_folder.mmd  access_root_folder.mmd  create_file.mmd  create_root_folder.mmd  create_subfolder.mmd  revoke_file.mmd  revoke_folder.mmd  share_file.mmd  share_folder.mmd  user_login.mmd  user_registration.mmd
server/: Dockerfile  main.py  wsgi.py
